[package]
name = "sip_tester"
version = "0.1.0"
authors = ["JacobSandin <jacob@js.se>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.4"
yaml-rust = "0.4"
rodio = "0.11.0"
dirs = "3.0.0"

# Linux might need
#hound = "3.4.0"
#alsa-sys = "0.1.2"
#openssl-sys = "0.9.58"

# Install on linux
#sudo apt-get install -y libssl-dev libasound2-dev portaudio19-dev build-essential libpulse-dev libdbus-1-dev
#
